--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-12-11  Jordi Mas <jmas@softcatala.org>
+
+	* ca.po: Fixes to Catalan translation
+
 2008-10-23  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
 	* es.po: Updated Spanish translation by Eduardo Retamales
