23 jan 2008 0.8.1.3 insert session now insert all it's persons
23 jan 2008
	0.8.1.3
	insert session now insert all it's persons

	added src/serverEvaluator.cs, remember to svn add

	0.8.1.2
	Finished the server SPing, SEvaluator, server session code
	done server stats with: pings, evaluators,
	sessions, persons. TODO: tests

	db 0.60: 
	-added volumeOn and evaluatorServerID to preferences. 
	-Session has serverUniqueID. Simulated tests now are -1, because 0 is real and
	positive is serverUniqueID
	
	convertedTables of tests to put a serverUniqueID 
		simulated now contains the serverUniqueID:
		-1 simulated test
		0 real test not uploaded
		>0 serverUniqueID of uploaded test


	try-catch on sound playing



svn path=/trunk/; revision=442

--- a/src/angle/changelog
+++ b/src/angle/changelog
@@ -2,6 +2,16 @@ do that validation does the skin method and the black method, instead of
 having a black method full of validation things
 at end, validation should add compare code
 
+findHoles should work only on ROIs (Region Of Interest). 
+The best is to ask first user for the points and play with the threshold in
+ROI (don't with the hole image). ROI is always in the middle of
+point (in future, ROI is detected by kalvan)
+If the point gets lost on that ROI, ask user again
+Ability to record thresold for next person and load
+
+max size of point should be marked vy software, and also size of ROI
+(maybe in future, ROI of toe could be little than other ROIs (that move fast)
+
 des 18
 
 	changee toe to not allow to be one pixel width (really bottom of the
