--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,47 @@
-Finishing the SPing code
+write a version compatibility thing for each server method, and if not
+compatible, tell user to update it's chronojump version
+
+check if server is online in a separate place on gui/chronojump.cs
+
+
+Add the Maria Giné test
+todo: record ip in SPing
+todo: upload a test (will upload it's person if not done before)
+
+todo: upload a session (except already uploaded tests, also check don't upload
+already uploaded persons)
+created server/session table (need to test)
+
+user can upload a session:
+-session will be uploaded
+-person and personSession will be uploaded
+-tests will be uploaded
+-uploadingState will change all the time
+
+23 jan 2008
+	0.8.1.3
+	insert session now insert all it's persons
+
+	added src/serverEvaluator.cs, remember to svn add
+
+	0.8.1.2
+	Finished the server SPing, SEvaluator, server session code
+	done server stats with: pings, evaluators,
+	sessions, persons. TODO: tests
+
+	db 0.60: 
+	-added volumeOn and evaluatorServerID to preferences. 
+	-Session has serverUniqueID. Simulated tests now are -1, because 0 is real and
+	positive is serverUniqueID
+	
+	convertedTables of tests to put a serverUniqueID 
+		simulated now contains the serverUniqueID:
+		-1 simulated test
+		0 real test not uploaded
+		>0 serverUniqueID of uploaded test
+
+
+	try-catch on sound playing
 
 16 jan 2008
 	Now we are able to connect from client gtk (corall) to server on pinux and do a ping, or insert a
