--- a/manual/chronojump_manual_es.lyx
+++ b/manual/chronojump_manual_es.lyx
@@ -1,4 +1,4 @@
-#LyX 1.5.3 created this file. For more info see http://www.lyx.org/
+#LyX 1.5.6 created this file. For more info see http://www.lyx.org/
 \lyxformat 276
 \begin_document
 \begin_header
@@ -2217,7 +2217,7 @@ status open
 \noindent
 \align center
 \begin_inset Graphics
-	filename Captura-Añadir-Editar múltiples personas.png
+	filename Captura-add-edit-multiple-persons.png
 	lyxscale 50
 	scale 50
 
