--- a/web/data/langs/_ca/Pages/faq
+++ b/web/data/langs/_ca/Pages/faq
@@ -106,7 +106,7 @@ Si desitgeu fer peticions de característiques no dubteu a escriure un correu a 
 
 <p><li> Com puc conèixer les darreres novetats del projecte? 
 <p>
-Us podeu inscriure o consultar els arxius de les <a href="contact_ca.html">llistes de correu</a>. A més a més, podeu consultar l'arxiu <a href="http://cvs.gnome.org/viewcvs/chronojump/changelog.txt?view=markup"><i>changelog</i> o registre de canvis</a>.
+Consulti els <a href="http://chronojump.org">foros</a>. A més a més, podeu consultar l'arxiu <a href="http://cvs.gnome.org/viewcvs/chronojump/changelog.txt?view=markup"><i>changelog</i> o registre de canvis</a>.
 
 <p><li>Per què s'anomena Chronojump si també serveix per a mesurar curses, temps de reacció i ritmes?
 <p>
@@ -114,7 +114,7 @@ La idea inicial va ser crear un programari per mesurar els esdeveniments tempora
 
 <p><li>M'agradaria col·laborar-hi. Com ho puc fer? 
 <p>
-Us podeu inscriure a la llista de correu <a href="contact_ca.html">chronojump-devel-list</a> presenteu-vos, expliqueu-nos perquè vol col·laborar-hi i quins són els vostres coneixements. 
+Consulti els <a href="http://chronojump.org">foros</a>.
 
 </ol>
 <p align="right"><a href="#top">Pugeu</a></p>
