--- a/web/data/langs/_es/Pages/faq
+++ b/web/data/langs/_es/Pages/faq
@@ -108,7 +108,7 @@ Si desea realizar peticiones de características no dude en escribir un correo a
 
 <p><li>¿Cómo puedo saber las últimas novedades del proyecto?
 <p>
-Inscríbase o consulte los acrivos de las <a href="contact_es.html">listas de correo</a>. Además puede consultar el archivo <a href="http://cvs.gnome.org/viewcvs/chronojump/changelog.txt?view=markup"><i>changelog</i> o registro de cambios</a>.
+Consulte los <a href="http://chronojump.org">foros</a>. Además puede consultar el archivo <a href="http://cvs.gnome.org/viewcvs/chronojump/changelog.txt?view=markup"><i>changelog</i> o registro de cambios</a>.
 
 <p><li>¿Por qué se llama Chronojump si también sirve para medir carreras, tiempos de reacción y ritmos?
 <p>
@@ -116,7 +116,7 @@ La idea inicial era crear un software para la medición de eventos temporales de
 
 <p><li>Me gustaría colaborar ¿cómo puedo hacerlo?
 <p>
-Escriba a la lista de correo <a href="contact_es.html">chronojump-devel-list</a> preséntese, explíquenos por qué quiere colaborar y cuáles son sus conocimientos.
+Consulte los <a href="http://chronojump.org">foros</a>.
 
 </ol>
 <p align="right"><a href="#top">Subir</a></p>
