--- a/web/data/langs/_gl/Pages/faq
+++ b/web/data/langs/_gl/Pages/faq
@@ -109,7 +109,8 @@ Se desexa realizar peticións de novas prestacións non dubide en escribir unha 
 
 <p><li>Como podo saber as últimas novidades do proxecto?
 <p>
-Inscríbase ou consulte os arquivos das <a href="contact_gl.html">listas de correo</a>. Ademais pode consultar o arquivo <a href="http://cvs.gnome.org/viewcvs/chronojump/changelog.txt?view=markup"><i>changelog</i> ou rexistro de cambios</a>.
+Consulte los <a href="http://chronojump.org">foros</a>. [TRADUCIR]
+<br>Ademais pode consultar o arquivo <a href="http://cvs.gnome.org/viewcvs/chronojump/changelog.txt?view=markup"><i>changelog</i> ou rexistro de cambios</a>.
 
 
 <p><li>Por que se chama ChronoJump se tamén serve para medir carreiras, tempo de reacción e ritmos?
@@ -118,7 +119,7 @@ A idea inicial era crear un software para a medición das fases temporais do sal
 
 <p><li>Gustaríame colaborar, como podo facelo?
 <p>
-Escriba á lista de correo <a href="contact_gl.html">chronojump-devel-list</a> preséntese, explíquenos por que quere colaborar e cales son os seus coñecementos.
+Consulte los <a href="http://chronojump.org">foros</a>. [TRADUCIR]
 
 </ol>
 <p align="right"><a href="#top">Subir</a></p>
