--- a/web/data/langs/_pt/Pages/faq
+++ b/web/data/langs/_pt/Pages/faq
@@ -106,7 +106,8 @@ Se desejas realizar pedidos de características não duvide em escrever um e-mai
  
 <p><li>Como posso saber as últimas novidades do projeto?
 <p>
-Inscreva-se ou consulte os arquivos das <a href="contact_es.html">listas de e-mail</a>. Ademais podes consultar o arquivo <a href="http://cvs.gnome.org/viewcvs/chronojump/changelog.txt?view=markup"><i>changelog</i> oo registro de mudanças</a>.
+Consulte los <a href="http://chronojump.org">foros</a>. [TRADUCIR]<br>
+Ademais podes consultar o arquivo <a href="http://cvs.gnome.org/viewcvs/chronojump/changelog.txt?view=markup"><i>changelog</i> oo registro de mudanças</a>.
  
 <p><li>Porque se denomina Chronojump se também serve para medir corridas, tempo de reação e ritmos?
 <p>
@@ -114,7 +115,7 @@ A idéia inicial era criar um software para a medição de eventos temporais do 
  
 <p><li>Gostaria de colaborar: Como posso fazer?
 <p>
-Escreva à lista de e-mail <a href="contact_es.html">chronojump-devel-list</a> apresente-se, explique-nos porque queres colaborar e quais são seus conhecimentos.
+Consulte los <a href="http://chronojump.org">foros</a>. [TRADUCIR]
  
 </ol>
 <p align="right"><a href="#top">Subir</a></p>
